--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mac-oui-lookup": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0"
   },
